src/main/default/objects/Extentia_SIM__Custom__c/Extentia_SIM__Custom__c.object-meta.xml
<CustomObject>
    <label>Custom</label>
    <nameField>
        <label>Custom obj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>