src/main/default/objects/Extentia_SIM__Custom__c/fields/Extentia_SIM__Included__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Included</label>
    <type>Checkbox</type>
</CustomField>