src/main/default/objects/Extentia_SIM__Custom__c/fields/Extentia_SIM__Lat__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__Lat__c</fullName>
    <label>Lat</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>