src/main/default/objects/Extentia_SIM__Custom__c/fields/Extentia_SIM__Phone__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__Phone__c</fullName>
    <label>Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>