src/main/default/objects/Extentia_SIM__Custom__c/fields/Extentia_SIM__Postal_code__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__Postal_code__c</fullName>
    <label>Postal code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>