src/main/default/objects/Extentia_SIM__Custom__c/fields/Extentia_SIM__Street__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>