src/main/default/objects/Extentia_SIM__Custom__c/listViews/Extentia_SIM__All.listView-meta.xml
<ListView>
    <fullName>Extentia_SIM__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>